crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__file[parquet]-arrow-indexes_partsupp_rand_4_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: partsupp_rand_4"
---
+---------------+---------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                    |
+---------------+---------------------------------------------------------------------------------------------------------+
| logical_plan  | Filter: partsupp.ps_partkey = Int64(1000) AND partsupp.ps_suppkey = Int64(1001)                         |
|               |   TableScan: partsupp projection=[ps_partkey, ps_suppkey, ps_availqty, ps_supplycost, ps_comment]       |
| physical_plan | CoalesceBatchesExec: target_batch_size=8192                                                             |
|               |   FilterExec: ps_partkey@0 = 1000 AND ps_suppkey@1 = 1001                                               |
|               |     SchemaCastScanExec                                                                                  |
|               |       BytesProcessedExec                                                                                |
|               |         DataSourceExec: partitions=16, partition_sizes=[7, 7, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6, 6] |
|               |                                                                                                         |
+---------------+---------------------------------------------------------------------------------------------------------+
