crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__file[parquet]-arrow-indexes_region_pk_4_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: region_pk_4"
---
+---------------+-----------------------------------------------------------------+
| plan_type     | plan                                                            |
+---------------+-----------------------------------------------------------------+
| logical_plan  | Filter: region.r_regionkey = Int32(4)                           |
|               |   TableScan: region projection=[r_regionkey, r_name, r_comment] |
| physical_plan | CoalesceBatchesExec: target_batch_size=8192                     |
|               |   FilterExec: r_regionkey@0 = 4                                 |
|               |     SchemaCastScanExec                                          |
|               |       BytesProcessedExec                                        |
|               |         DataSourceExec: partitions=1, partition_sizes=[1]       |
|               |                                                                 |
+---------------+-----------------------------------------------------------------+
